playbooks/yaml/argocd-apps/cert-manager/test-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web
  namespace: cert-manager
spec:
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
        - name: nginx
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: test-web
  namespace: cert-manager
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-web
