playbooks/yaml/argocd-apps/cert-manager/prod-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web
  namespace: cert-manager
spec:
  selector:
    matchLabels:
      app: prod-web
  template:
    metadata:
      labels:
        app: prod-web
    spec:
      containers:
        - name: nginx
          image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: prod-web
  namespace: cert-manager
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: prod-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "soyspray.vip"
      secretName: prod-cert-tls
  rules:
    - host: soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-web
                port:
                  number: 80
